小数点以下切り捨ての設定をした

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 
     <h2 class="mt-5">計算結果</h2>
     <p>使用量: <span id="usage-amount">0</span></p>
-    <p>重量料金: <span id="unit-charge">0</span></p>
-    <p>調整額: <span id="adjustment-charge">0</span></p>
-    <p>税込み合計額: <span id="total-charge">0</span></p>
+    <p>重量料金（少数点以下切り捨て）: <span id="unit-charge">0</span></p>
+    <p>調整額（小数点以下切り捨て）: <span id="adjustment-charge">0</span></p>
+    <p>税込み合計額（小数点以下切り捨て）: <span id="total-charge">0</span></p>
   </div>
 
   <script src="renderer.js"></script>
